syntax = "proto3";
package calculator;
option go_package="github.com/pranotobudi/Go-gRPC-Master-Class/calculator/calculatorpb";

message Operand {
    int64 first_element = 1;
    int64 second_element = 2;
}

message SumRequest {
    Operand operand = 1;
}

message SumResponse {
    int64 result = 1;
}
message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 result = 1;
}

message ComputeAverageRequest{
    int64 number = 1;
}
message ComputeAverageResponse {
    int64 result = 1;
}

message FindMaximumRequest{
    int64 number = 1;
}
message FindMaximumResponse{
    int64 result = 1;
}
service CalculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};    
    //Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};
    //BiDi Streaming
    rpc FindMaximum(stream FindMaximumRequest) returns(stream FindMaximumResponse){};
}
